Fix overflow of candidate pane

--- a/interface/components/candidates/index.styl
+++ b/interface/components/candidates/index.styl
@@ -2,12 +2,9 @@ tf-candidates
   position relative
   display block
   size 100%
-  overflow hidden
-  overflow-y scroll
+  overflow scroll
 
   .wrapper
-    overflow hidden
-    position absolute
     right 10px
     width 100%
 
